--- a/certificates/cr1.html
+++ b/certificates/cr1.html
@@ -46,9 +46,52 @@
   </head>
 
   <body>
+    <div class="con">
+          <div class="nav-bar">
+            <div class="toggle-menu">
+              <div class="line line1"></i></div>
+              <div class="line line2"></div>
+              <div class="line line3"></div>
+            </div>
+            <ul class="nav-list">
+              <li class="nav-list-item"><a href="../index.html" class="nav-link"><img src="../images/Logo.png" class="img-fluid" alt="Logo" width="30" height="30" />Home</a></li>
+              <li class="nav-list-item"><a href="../about.html"  class="nav-link"><i class="fas fa-info"></i>
+              <h5 >About</h5></a></li>
+              <li class="nav-list-item">
+                <a href="#" class="nav-link">    <i class="fas fa-border-all"></i>
+                    <h5 >Projects</h5></a>
+              </li>
+              <li class="nav-list-item"><a href="../certificates/cr-main.html" class="nav-link"><i class="fas fa-certificate"></i>
+              <h5 >Certificate</h5></a></li>
+              <li class="nav-list-item">
+                <a href="../gallery.html" class="nav-link"><i class="fas fa-images"></i>
+                <h5 >Gallery</h5></a>
+              </li>
+              <li class="nav-list-item">
+                <a href="../music.html" class="nav-link"><i class="fas fa-play"></i>
+                <h5 >Music</h5></a>
+              </li>
+              <li class="nav-list-item">
+                <a href="#" class="nav-link">  <i class="fas fa-blog"></i>
+                    <h5>Blogs</h5></a>
+              </li>
+              <li class="nav-list-item">
+                <a href="../contact.html" class="nav-link"><i class="fas fa-phone"></i>
+                <h5 >Contact</h5></a>
+              </li>
+              <li class="nav-list-item">
+                <div class="btn-toggle button" type="button" id="dark-mode">
+                  <i class="fas fa-moon" id="fa-moon1"></i>
+                  <i class="fas fa-sun sun1" id="img-fluid1"></i>
+                </div>
+              </li>
+            </ul>
+
+          </div>
+        </div>
     <!-- Menu Bar Creation -->
-    <div class="row">
-      <div class="col-lg-3">
+    <div class="row  cir">
+      <div class="col-lg-2">
         <div id="menu" class="menu">
           <div class="actionsBar">
             <div>
@@ -60,14 +103,14 @@
           </div>
           <ul class="optionsBar">
             <li class="menuItem">
-              <a href="./index.html" class="menuOption">
+              <a href="../index.html" class="menuOption">
                 <img src="../images/Logo.png" class="img-fluid" alt="Logo">
                 <h5 class="menuText">Home</h5>
               </a>
             </li>
 
             <li class="menuItem">
-              <a href="#about" id="productManagerBtn" class="menuOption">
+              <a href="../about.html" id="productManagerBtn" class="menuOption">
                 <i class="fas fa-info"></i>
                 <h5 class="menuText">About</h5>
               </a>
@@ -80,7 +123,7 @@
             </li>
             <li class="menuItem">
               <a
-                href="./certificates/cr-main.html"
+                href="../certificates/cr-main.html"
                 id="constantManagerBtn"
                 class="menuOption"
               >
@@ -89,14 +132,14 @@
               </a>
             </li>
             <li class="menuItem">
-              <a href="./gallery.html" id="constantManagerBtn" class="menuOption">
+              <a href="../gallery.html" id="constantManagerBtn" class="menuOption">
               <i class="fas fa-images"></i>
                 <h5 class="menuText">Gallery</h5>
               </a>
             </li>
 
             <li class="menuItem">
-              <a href="./music.html" id="constantManagerBtn" class="menuOption">
+              <a href="../music.html" id="constantManagerBtn" class="menuOption">
                 <i class="fas fa-play"></i>
                 <h5 class="menuText">Music</h5>
               </a>
@@ -108,7 +151,7 @@
               </a>
             </li>
             <li class="menuItem">
-              <a href="./contact.html" id="constantManagerBtn" class="menuOption">
+              <a href="../contact.html" id="constantManagerBtn" class="menuOption">
                 <i class="fas fa-phone"></i>
                 <h5 class="menuText">Contact</h5>
               </a>
@@ -130,7 +173,7 @@
 
 
     <!-- Certifcate Display Region -->
-    <div class="col-lg-9" style="padding-top: 100px;padding-right:40px;padding-left:0;">
+    <div class="col-lg-10 ">
 
     <section class="container certificate__section" >
       <div >
@@ -145,29 +188,41 @@
         </div>
         </div>
 
-        <div class="row ">
+        <div class="row  side ">
           <h5>More about Samarth Goyal's accomplishment</h5>
 
           <hr />
-          <div class="col-lg-4 text-center">
+          <div class="col-lg-4 col-4 text-center img-box">
+
+            <img
+              src="../images/Certificates/clog.png"
+              class="img-clog"
+              alt="IMG__1"
+            />
+
+
+          </div>
+
+
+          <div class="col-lg-4 col-4 text-center ">
+            <p>ISSUED ON:</p>
+            <h5>APRIL 10, 2020</h5>
+          </div>
+          <div class="col-lg-4 col-4 text-center">
             <p>CERTIFICATE ID NUMBER:</p>
             <h5>C2232261 EN</h5>
           </div>
 
-          <div class="col-lg-4 text-center">
-            <p>ISSUED ON:</p>
-            <h5>APRIL 10, 2020</h5>
-          </div>
-
-        <div class="col-lg-4 text-center">
-          <p>ISSUED ON:</p>
-          <h5>APRIL 10, 2020</h5>
-        </div>
       </div>
       </div>
     </section>
   </div></div>
-
+  <footer style="margin-top:50px;">
+    <p >
+      Created With ❤️ By Samarth | Copyright &copy;
+      <span class="Footer__year">2021</span> All rights reserved !
+    </p>
+  </footer>
     <!-- Bootstrap Js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -202,6 +257,7 @@
     <script src="../js/Nav.js"></script>
     <script src="../js/sidebar.js"></script>
       <script src="../js/mode.js"></script>
-
+      <script src="../js/mobile.js"></script>
+      <script src="../js/mobmenu.js"></script>
   </body>
 </html>
